fix(kanban): separate view dnd flicker fix

--- a/src/app/components/kanban/page.module.scss
+++ b/src/app/components/kanban/page.module.scss
@@ -44,31 +44,36 @@
   }
 
   .placeholder {
+    --ph-size: .8rem;
     position: relative;
     flex-shrink: 0;
-    border-radius: var(--br-pill);
-    border: .1rem dashed var(--yellow-1);
-    background-color: var(--yellow-1-10);
+    border-radius: 1rem;
+    border: .1rem solid var(--blue-1);
+    background-color: var(--blue-1-10);
   }
 
   .ph_item {
     width: auto;
-    height: .6rem;
+    height: var(--ph-size);
 
     &[data-layout="vertical"] {
-      width: .6rem;
+      width: var(--ph-size);
       height: auto;
     }
   }
 
   .ph_col {
-    width: .6rem;
+    width: var(--ph-size);
     height: auto;
 
     &[data-layout="vertical"] {
       width: auto;
-      height: .6rem;
+      height: var(--ph-size);
     }
+  }
+
+  .column[data-dragging="true"] {
+    opacity: .5;
   }
 
   .item_card {
